2003-01-16  Dan Espen  <dane@mk.telcordia.com>

	* NEWS: Update news.
	* fvwm/builtins.c (CMD_Exec): Close stdin so the exec'd process knows
	its not interactive.

2002-12-24  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/add_window.c (GetWindowSizeHints):  Change hint warning message
	so we won't get so many application bugs report to fvwm-workers.

2002-12-03  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	recognize and use $PERL if any

2002-11-29  Dan Espen  <dane@mk.telcordia.com>

	* NEWS, configure.in:
	changed version to 2.4.15

2002-11-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/misc.c (GrabEm):
	confine the pointer to the root window when grabbed

2002-11-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (__get_stacking_sibling):
	fixed icons on top of all other windows after a restart

2002-11-26  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm.c (InitVariables):
	fixed DEFAULT_EDGE_SCROLL being interpretted as 100 pixels instead
	of 100%

	* fvwm/borders.c:
	* fvwm/builtins.c:
	backported 2 small fixes regarding titlebar button states

2002-11-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/bindings.c (activate_binding):
	removed patch for bindings being overridden by applications

2002-11-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/session.c (LoadWindowStates):
	fixed parsing of strings beginning with whitespace in session file

	* fvwm/icons.c (CreateIconWindow):
	fixed initial position of application provided icon windows

2002-11-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (BroadcastRestack):
	split long packets, fixed a bug and cleaned up

	* libs/Module.c (ReadFvwmPacket):
	ignore packets that are too long

2002-11-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	* configure.in:
	increased version to 2.4.14

	* fvwm/fvwm2.1:
	* NEWS:
	updated for 2.4.13

2002-10-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/bindings.c (activate_binding):