@@ -1,3 +1,8 @@
+2003-01-20  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmAuto/FvwmAuto.c (main):
+	fixed core dump in parsing of command line arguments
+
 2002-12-01  olicha  <olivier.chapuis@free.fr>
 
 	* FvwmScript/Instructions.c (ChangeIcon):
