@@ -1,3 +1,8 @@
+2003-01-20  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/events.c (HandleConfigureRequest):
+	fixed size calculations of icons
+
 2003-01-16  Dan Espen  <dane@mk.telcordia.com>
 
 	* NEWS: Update news.
